# kalman-ahrs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ccpp.yml
docs/: Doxyfile
include/ahrs/: ahrs.h  ahrs.hpp  ahrs_sensors.h  ahrs_sensors.hpp  kalman.h  kalman.hpp  numeric.h  numeric.hpp  sensor_readout.h  sensors.h  state_predictor.h
include/ekf_ahrs/: ahrs.hpp  ekf_ahrs.hpp  kalman.cpp  kalman.hpp  numeric.hpp
src/: ahrs.cpp  ahrs_sensors.cpp  kalman.cpp  numeric.hpp  sensors.cpp
test/: CMakeLists.txt  test.cpp
test/mocks/: mock.hpp  mocks.h  mocks.hpp
test/src/: ahrs_sensors_test.cpp  ahrs_test.cpp  ekf_ahrs_test.cpp  kalman_test.cpp  main.cpp  numeric_test.cpp  sensor_readout_test.cpp
